--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class='main-content'>
         {{>headers}}
+        <p>This page is created by YS. It uses data from mapbox.com and darksky.net.</p>
         <img class='portrait' src='/img/robot.png'>
     </div>
 
